base/src/test/resources/failure/scope/inf-rec.aya.txt
In file $FILE:1:4 ->

  1 | def undefined => undefined
                       ^-------^ The non-terminating call happens here

Error: The recursive definition `undefined` is not structurally recursive

1 error(s), 0 warning(s).
What are you doing?
